ДЗ-6 принято, маржины исправил

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                   ></use>
                 </svg>
               </div>
-              <div class="form-modal-box">
+              <div class="form-modal-box form-modal-box-last">
                 <label for="comment">Комментарий</label>
                 <textarea
                   type="comment"
