--- a/portfolio.html
+++ b/portfolio.html
@@ -24,32 +24,32 @@
         <nav class="nav">
           <a class="logo" href="">Web<span class="logo-right">Studio</span></a>
           <ul class="navigator">
-            <li class="paragraph-navigator">
-              <a class="link-navigator" href="index.html">Студия</a>
+            <li class="navigator__paragraph">
+              <a class="navigator__link" href="index.html">Студия</a>
             </li>
-            <li class="paragraph-navigator">
-              <a class="link-navigator current" href="portfolio.html"
+            <li class="navigator__paragraph">
+              <a class="navigator__link navigator__link--current" href="portfolio.html"
                 >Портфолио</a
               >
             </li>
-            <li class="paragraph-navigator">
-              <a class="link-navigator" href="">Контакты</a>
+            <li class="navigator__paragraph">
+              <a class="navigator__link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
         <ul class="contacts">
-          <li class="paragraph-contacts">
-            <a class="link link-contacts" href="mailto:info@devstudio.com"
-              ><svg class="link icon-mail">
+          <li class="contacts__paragraph">
+            <a class="contacts__link" href="mailto:info@devstudio.com"
+              ><svg class="contacts__icon--mail">
                 <use
                   href="./images/icons.svg/contacts/contacts-sprite.svg#envelope"
                 ></use></svg
               >info@devstudio.com</a
             >
           </li>
-          <li class="paragraph-contacts">
-            <a class="link link-contacts" href="tel:+380961111111"
-              ><svg class="link icon-tel">
+          <li class="contacts__paragraph">
+            <a class="contacts__link" href="tel:+380961111111"
+              ><svg class="contacts__icon--tel">
                 <use
                   href="./images/icons.svg/contacts/contacts-sprite.svg#smartphone"
                 ></use></svg
@@ -320,8 +320,8 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-address">
-          <a class="logo" href="">Web<span class="logo-right">Studio</span></a>
-          <address>
+          <a class="logo" href="">Web<span class="logo-right--colour">Studio</span></a>
+          
             <ul class="address">
               <li class="paragraph-address">
                 <a class="link-address" href=""
@@ -335,7 +335,7 @@
                 <a class="link" href="">+38 099 111 11 11</a>
               </li>
             </ul>
-          </address>
+          
         </div>
         <div class="footer-messengers">
           <h2 class="title-messengers">ПРИСОЕДИНЯЙТЕСЬ</h2>
