--- a/portfolio.html
+++ b/portfolio.html
@@ -20,27 +20,27 @@
   <body class="body">
     <!-- Section header -->
     <header class="header">
-      <div class="container header-container">
+      <div class="container header__container">
         <nav class="nav">
-          <a class="logo" href="">Web<span class="logo-right">Studio</span></a>
+          <a class="logo" href="">Web<span class="logo__right">Studio</span></a>
           <ul class="navigator">
-            <li class="navigator__paragraph">
+            <li class="navigator__item">
               <a class="navigator__link" href="index.html">Студия</a>
             </li>
-            <li class="navigator__paragraph">
+            <li class="navigator__item">
               <a
                 class="navigator__link navigator__link--current"
                 href="portfolio.html"
                 >Портфолио</a
               >
             </li>
-            <li class="navigator__paragraph">
+            <li class="navigator__item">
               <a class="navigator__link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
         <ul class="contacts">
-          <li class="contacts__paragraph">
+          <li class="contacts__item">
             <a class="contacts__link" href="mailto:info@devstudio.com"
               ><svg class="contacts__icon--mail">
                 <use
@@ -49,7 +49,7 @@
               >info@devstudio.com</a
             >
           </li>
-          <li class="contacts__paragraph">
+          <li class="contacts__item">
             <a class="contacts__link" href="tel:+380961111111"
               ><svg class="contacts__icon--tel">
                 <use
@@ -65,32 +65,32 @@
       <!-- Section portfolio -->
       <section class="section">
         <div class="container">
-          <h2 class="title-large visually-hidden">Наши работы</h2>
+          <h2 class="section__title visually-hidden">Наши работы</h2>
           <ul class="button-list">
-            <li class="button-list__paragraph">
+            <li class="button-list__item">
               <button class="button-list__button" type="button">Все</button>
             </li>
-            <li class="button-list__paragraph">
+            <li class="button-list__item">
               <button class="button-list__button" type="button">
                 Веб-сайты
               </button>
             </li>
-            <li class="button-list__paragraph">
+            <li class="button-list__item">
               <button class="button-list__button" type="button">
                 Приложения
               </button>
             </li>
-            <li class="button-list__paragraph">
+            <li class="button-list__item">
               <button class="button-list__button" type="button">Дизайн</button>
             </li>
-            <li class="button-list__paragraph">
+            <li class="button-list__item">
               <button class="button-list__button" type="button">
                 Маркетинг
               </button>
             </li>
           </ul>
           <ul class="portfolio">
-            <li class="portfolio__paragraph">
+            <li class="portfolio__item">
               <a class="portfolio__link" href="">
                 <div class="portfolio__thumb">
                   <img
@@ -113,7 +113,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio__paragraph">
+            <li class="portfolio__item">
               <a class="portfolio__link" href="">
                 <div class="portfolio__thumb">
                   <img
@@ -138,7 +138,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio__paragraph">
+            <li class="portfolio__item">
               <a class="portfolio__link" href="">
                 <div class="portfolio__thumb">
                   <img
@@ -161,7 +161,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio__paragraph">
+            <li class="portfolio__item">
               <a class="portfolio__link" href=""
                 ><div class="portfolio__thumb">
                   <img
@@ -184,7 +184,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio__paragraph">
+            <li class="portfolio__item">
               <a class="portfolio__link" href=""
                 ><div class="portfolio__thumb">
                   <img
@@ -207,7 +207,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio__paragraph">
+            <li class="portfolio__item">
               <a class="portfolio__link" href=""
                 ><div class="portfolio__thumb">
                   <img
@@ -230,7 +230,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio__paragraph">
+            <li class="portfolio__item">
               <a class="portfolio__link" href=""
                 ><div class="portfolio__thumb">
                   <img
@@ -253,7 +253,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio__paragraph">
+            <li class="portfolio__item">
               <a class="portfolio__link" href=""
                 ><div class="portfolio__thumb">
                   <img
@@ -276,7 +276,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio__paragraph">
+            <li class="portfolio__item">
               <a class="portfolio__link" href=""
                 ><div class="portfolio__thumb">
                   <img
@@ -309,20 +309,20 @@
       <div class="container footer-container">
         <div class="footer-logo">
           <a class="logo" href=""
-            >Web<span class="logo-right--colour">Studio</span></a
+            >Web<span class="logo__right--colour">Studio</span></a
           >
           <ul class="footer-address">
-            <li class="footer-address__paragraph">
+            <li class="footer-address__item">
               <a
                 class="footer-address__link footer-address__link--colour"
                 href=""
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li class="footer-address__paragraph">
+            <li class="footer-address__item">
               <a class="footer-address__link" href="">info@devstudio.com</a>
             </li>
-            <li class="footer-address__paragraph">
+            <li class="footer-address__item">
               <a class="footer-address__link" href="">+38 099 111 11 11</a>
             </li>
           </ul>
@@ -330,7 +330,7 @@
         <div class="footer-messengers">
           <h2 class="footer__title">ПРИСОЕДИНЯЙТЕСЬ</h2>
           <ul class="footer-messengers__list">
-            <li class="messengers__paragraph">
+            <li class="messengers__item">
               <a
                 class="messengers__link messengers__link--сolour"
                 href="https://www.instagram.com"
@@ -344,7 +344,7 @@
                 </svg>
               </a>
             </li>
-            <li class="messengers__paragraph">
+            <li class="messengers__item">
               <a
                 class="messengers__link messengers__link--сolour"
                 href="https://www.twitter.com"
@@ -358,7 +358,7 @@
                 </svg>
               </a>
             </li>
-            <li class="messengers__paragraph">
+            <li class="messengers__item">
               <a
                 class="messengers__link messengers__link--сolour"
                 href="https://www.facebook.com"
@@ -372,7 +372,7 @@
                 </svg>
               </a>
             </li>
-            <li class="messengers__paragraph">
+            <li class="messengers__item">
               <a
                 class="messengers__link messengers__link--сolour"
                 href="https://www.linkedin.com"
